# zeno-indexer

./: .env  .gitignore  Cargo.toml  LICENSE
.github/workflows/: release.yml
migrations/: 20250818_create_tables.sql  DB Migrations Guide.md
src/: config.rs  main.rs  manage.rs  notice.md  tasks.rs  utils.rs
src/abi/: contract.json  parser.rs
src/api/: handler.rs
src/db/: postgres.rs  schema.sql  types.rs
src/importer/: rest.rs
src/indexer/: external.rs
src/processor/: handler.rs
src/provider/: eth.rs
src/subscription/: manager.rs  mod.rs  types.rs
src/utils/: format.rs
src/wallet/: local.rs
src/worker/: forex.rs  marketdata.rs  metadata.rs  mod.rs  notices.md  tokens_price.rs
tests/: smoke.rs
