[package]
name = "indexer"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A simple indexer application using Axum"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
http = "1.3.1"
reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter"] }
ethers = "2.0.14"
futures-util = "0.3.31"
futures = "0.3.31"
chrono = {version = "0.4.41", features=["serde"]}
tracing-loki = "0.2.6"
url = "2.5.4"
alloy = { version = "1.0.25", features = ["full"] }
alloy-contract = "1.0.25"
alloy-json-abi = "1.3.1"





